--- a/anvil.yaml
+++ b/anvil.yaml
@@ -34,14 +34,12 @@ correct_dependency_ids: {W4B3TDKJEAXPB5XJ: W4B3TDKJEAXPB5XJ}
 uplink_visible: true
 renamed: true
 runtime_options: {version: 2, server_version: python3-sandbox, client_version: '2', server_spec: null}
-dependencies:
-- app_id: W4B3TDKJEAXPB5XJ
-  version: {dev: false}
+dependencies: []
 metadata: {}
 services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
 - source: /runtime/services/anvil/users.yml
-  client_config: {allow_signup: false, enable_automatically: true, use_email: true, confirm_email: true}
+  client_config: {allow_signup: false, enable_automatically: false, use_email: false, confirm_email: false}
   server_config: {user_table: users}
